# falprs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ru.md  config.yaml.example  converters.hpp  falprs.service.example  frs_api.cpp  frs_api.hpp  frs_caches.hpp  frs_workflow.cpp  frs_workflow.hpp  logrotate.example  lprs_api.cpp  lprs_api.hpp  lprs_caches.hpp  lprs_workflow.cpp  lprs_workflow.hpp  main.cpp
docs/: openapi.yaml  swagger-initializer.js
examples/frs/: frs_backend.js  test_add_stream.sh  test_list_all_faces.sh  test_list_streams.sh  test_register_face.sh  test_remove_stream.sh  test_workflow.sh
examples/lprs/: lprs_backend.js  package.json  test_add_stream.sh  test_list_streams.sh  test_remove_stream.sh  test_workflow.sh
model_repository/lpdnet_yolo/: config.pbtxt
model_repository/lprnet_yolo/: config.pbtxt
model_repository/vcnet_vit/: config.pbtxt
model_repository/vdnet_yolo/: config.pbtxt
model_repository_templates/arcface/: config.pbtxt
model_repository_templates/genet/: config.pbtxt
model_repository_templates/lpdnet_yolo/: config.pbtxt
model_repository_templates/lprnet_yolo/: config.pbtxt
model_repository_templates/scrfd/: config.pbtxt
model_repository_templates/vcnet_vit/: config.pbtxt
model_repository_templates/vdnet_yolo/: config.pbtxt
scripts/: build_falprs.sh  falprs_service.sh  setup_docker.sh  setup_nvidia_container_toolkit.sh  setup_nvidia_drivers.sh  sql_frs.sh  sql_lprs.sh  tensorrt_plans.py  tensorrt_plans.sh  triton_service.sh
sql/frs/: 01_vstream_groups.sql  02_video_streams.sql  03_face_descriptors.sql  04_descriptor_images.sql  05_link_descriptor_vstream.sql  06_log_faces.sql  07_special_groups.sql  08_link_descriptor_sgroup.sql  09_common_config.sql  10_default_vstream_config.sql  11_face_descriptors_new_column.sql
sql/lprs/: 01_vstream_groups.sql  02_vstreams.sql  03_events_log.sql  04_default_vstream_config.sql
tests/: .gitignore  clean_data.sql  prepare_data.sql  test_api_frs.py  test_api_lprs.py  test_clean.sh  test_config.yaml  test_prepare.sh
utils/: .gitignore  config.sample.py  import_data.py  requirements.txt  sync_data.py  vstream_groups.py
